[package]
name = "mz-protokoll"
version = "1.0.1"
edition = "2021"
authors = ["Marcel Zimmer"]
description = "Desktop-App zum Erstellen und Exportieren von Meeting-Protokollen"
license = "MIT"
repository = "https://github.com/marcelzimmer/mz-protokoll"
homepage = "https://www.marcelzimmer.de"

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true

[build-dependencies]
winresource = "0.1"

[dependencies]
eframe = "0.31"
chrono = "0.4"
rfd = "0.15"
genpdf = "0.2"
